sources/2.0.0/sections/11-data_product_delivery.adoc

[[sec-data-product-delivery]]
== Data Product Delivery

=== Introduction
This clause describes how S-102 data will be delivered from the charting authority to the mariner.

*Units of Delivery*:: Exchange Set

*Transfer Size*:: See <<subsec-dataset-size>>.

*Medium Name*:: Digital Data Delivery

*Other Delivery Information*::
+
--
Each dataset must be contained in a physically separate, uniquely identified file on the transfer medium.

Each exchange set has a single exchange catalogue which contains the discovery metadata for each dataset.

An exchange set is encapsulated into a form suitable for transmission by a mapping called an encoding. An encoding translates each of the elements of the exchange set into a logical form suitable for writing to media and for transmission online. An encoding may also define other elements in addition to the exchange set contents (This is media identification, data extents etc. ...) and may define commercial constructs such as encryption and compression methods.

If the data is transformed in S-102 it must not be changed.

This Product Specification defines the encoding which must be used as a default for transmission of data between parties.

The encoding encapsulates exchange set elements as follows:
--

*Mandatory Elements*:::
* S-102 datasets -- HDF encoding
* Exchange Catalogue -- the XML encoded representation of exchange set catalogue features [discovery metadata].


*Optional Elements*:::
* S-102 Feature Catalogue -- If it is necessary to deliver the latest Feature Catalogue to the end user it may be done using the S-102 exchange set mechanism for datasets
* S-102 Portrayal Catalogue -- If it is necessary to deliver the latest Portrayal Catalogue to the end user it may be done using the S-102 exchange set mechanism for datasets.


=== Dataset

==== Dataset Management
Three types of dataset files may be produced and contained within an exchange set:

* New dataset: Initial.
* New edition of a dataset: Includes new information. New editions must cover the same area as its predecessor.
* Cancellation: The dataset is cancelled and no longer available to be displayed or used.

[[subsec-dataset-size]]
==== Dataset Size
S-102 delivery will take place in one of two forms:

. network transfer to platform (that is, internet download), or
. physical media transfer (that is, removable media). An example scenario for each method has been provided below:

NOTE: The use of 10 MB and 256 MB in this and other sections should be treated as informative information only. Additionally, any computed values associated with either file size limit should be treated as approximate answers. Final selection of an appropriate file size limit or grid resolution is left to the discretion of the data producer.

*Network Transfer*:: To minimize overall file size, the HO produces a 10 MB file for wireless transmission to marine vessels. In uncompressed form, this file would contain roughly 600 nodes by 600 nodes.

*Physical Transfer*::
+
--
The HO produces a 256 MB file which can be personally delivered to a ship in port. In uncompressed form, this file would contain roughly 5700 nodes by 5700 nodes.

<<tab-informative-grid-resolution-and-resulting-tile-size-at-chart-scale>>:: Informative Grid Resolutions and Tile Size at Chart Scale, provides general information to aid in the compilation of S-102 data for specific charting scales.

<<annex-s102-dataset-size-and-production>>:: S-102 Dataset Size and Production, discusses in greater detail the physical size components of an S-102 file.
--


===== S-102 Grid Resolution and Tiling

[[tab-informative-grid-resolution-and-resulting-tile-size-at-chart-scale]]
.Informative Grid Resolution and Resulting Tile Size at Chart Scale
[cols="a,a,a,a",options="header"]
|===
|Scale |Informative Grid Resolution |Resulting Tile Size @ 10 MB |Resulting Tile Size @ 256 MB

|NULL (only allowed on minimum display scale where the maximum display scale = 10,000,000)
|
|Approximate Linear Distance in Nautical Miles (M) for a 600 X 600 node grid
|Approximate Linear Distance in Nautical Miles (M) for a 5700 X 5700 node grid

^.^|1:10,000,000
^.^|900 metres
^.^|291 X 291
^.^|2770 X 2770

^.^|1:3,500,000
^.^|900 metres
^.^|291 X 291
^.^|2770 X 2770

^.^|1:1,500,000
^.^|450 metres
^.^|145 X 145
^.^|1385 X 1385

^.^|1:700,000
^.^|210 metres
^.^|68 X 68
^.^|646 X 646

^.^|1:350,000
^.^|105 metres
^.^|34 X 34
^.^|323 X 323

^.^|1:180,000
^.^|54 metres
^.^|17.5 X 17.5
^.^|166 X 166

^.^|1:90,000
^.^|27 metres
^.^|8.7 X 8.7
^.^|83 X 83

^.^|1:45,000
^.^|13 metres
^.^|4.2 X 4.2
^.^|40 X 40

^.^|1:22,000
^.^|6 metres
^.^|1.9 X 1.9
^.^|18.5 X 18.5

^.^|1:12,000
^.^|3 metres
^.^|1.0 X 1.0
^.^|9.0 X 9.0

^.^|1:8,000
^.^|2 metres
^.^|0.6 X 0.6
^.^|6.0 X 6.0

^.^|1:4,000
^.^|1 metres
^.^|0.3 X 0.3
^.^|3.0 X 3.0

^.^|1:3,000
^.^|1 metres
^.^|0.3 X 0.3
^.^|3.0 X 3.0

^.^|1:2,000
^.^|1 metres
^.^|0.3 X 0.3
^.^|3.0 X 3.0

^.^|1:1,000
^.^|1 metres
^.^|0.3 X 0.3
^.^|3.0 X 3.0
|===

[[subsec-dataset-file-naming]]
==== Dataset file naming
Dataset naming must follow a standard pattern to give implementers greater predictability of incoming datasets. S-102 dataset naming conventions must follow these rules.

*102PPPPØØØØØØØØØØØØ.H5*::
102::: the first 3 characters identify the dataset as an S-102 dataset (mandatory).
PPPP::: the fourth to seventh characters is the producer code according to the IHO Geospatial Information Registry, Producer Code Register (mandatory for S-102).
ØØØØØØØØØØØØ::: the eighth to the maximum nineteenth characters are optional and may be used in any way by the producer to provide the unique file name. The following characters are allowed in the dataset name: A to Z, 0 to 9 and the special character _ (underscore).
H5::: denotes and HDF5 file.

=== Exchange Catalogue
The exchange catalogue acts as the table of contents for the exchange set. The catalogue file of the exchange set must be named CATATLOG.102. No other file in the exchange set may be named CATALOG.102. The contents of the exchange catalogue are described in <<sec-metadata>>.

=== Data integrity and encryption
S-100 Part 15 defines the algorithms for compressing, encrypting and digitally signing datasets based on the S-100 Data Model. The individual Product Specifications provide details about which of the elements are being used and on which files in the dataset.

==== Use of Compression
The data producer decides if compression will be used on the S-102 product files (HDF5). It is expected that a hydrographic office will make a policy decision and that all the S-102 datasets from the producer will be either compressed or uncompressed.

It is recommended to compress all the dataset files, for example HDF5 files. The ZIP compression method defined in S-100 Part 15 must be applied to the product files.

The use of compression will be encoded: +
Since information about compression is encoded in the S-102_ExchangeCatalogue, it is implicitly applied to all the dataset files in the exchange set. It will not be possible to create an exchange set where some HDF5 files are compressed while others are not. In cases where a data distributor produces an integrated S-102 product, all sources are required to be either compressed or uncompressed at time of integration. In this situation the digital signature encoded into source data (that is, original data producer) will be replaced with that of the distributor (Data Server).


==== Use of Data Protection
It is recommended to encrypt all the dataset files, for example HDF5. The encryption method defined in S-100 Part 15 must be applied.

==== Use of Digital Signatures
Digital Signatures shall be used on all files included in a S-102 compliant exchange set to meet the requirements of IMO resolution MSC.428(98) to reduce cyber security risks among users, especially when used in navigations systems at sea. The recommended signature method is defined in S-100 Part 15.

The digital signature information is encoded either in the S102_DatasetDiscoveryMetaData or the S102_CatalogueMetadata record for each file included in the exchange set.
